Update docker image tag name

--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -39,7 +39,7 @@ jobs:
             fmtod/pestphp
           flavor: |
             latest=auto
-            prefix=${{ inputs.pest_version }}
+            prefix=${{ inputs.pest_version }}-
             suffix=
           tags: |
             type=ref,event=branch
